push some minor changes

--- a/html/content.html
+++ b/html/content.html
@@ -3,6 +3,12 @@ Dijit ContentPane to hold all the elements. The ContentPane is assigned a dynami
 takes the ContentPane id and prepends it to every element with a declared id in this HTML before the elements are created.
 The unique ContentPane id makes all the element ids unique and prevents duplicate id errors across other apps.-->
 
+
+
+
 <section>
-	<div>Hello World</div>
+	<div class="blueFont">Hello World</div>
+	<div class="cda-sidebar-wrapper">
+		<div>test</div>
+	</div>
 </section>
