--- a/html/content.html
+++ b/html/content.html
@@ -63,26 +63,30 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		</div>
 	</section>
 
-	<section class="cda-parameter-option-wrapper">
+	<section>
 		<h4>Parameters to simulate:</h4>
-		<label class="form-component" for="nitrogen-option">
-			<input checked type="checkbox" id="nitrogen-option" name="parameter-option">
-			<div class="check"></div>
-			<span class="form-text">Nitrogen</span>
-		</label>
-		<br>
-		<label class="form-component disabled" for="phosphorus-option">
-			<input type="checkbox" id="phosphorus-option" name="parameter-option">
-			<div class="check"></div>
-			<span class="form-text">Phosphorus</span>
-		</label>
-		<br>
-		<label class="form-component" for="sediment-option">
-			<input type="checkbox" id="sediment-option" name="parameter-option">
-			<div class="check"></div>
-			<span class="form-text">Sediment</span>
-		</label>
+		<div class="cda-parameter-option-wrapper">
+			<label class="form-component" for="nitrogen-option">
+				<input checked type="checkbox" id="nitrogen-option" name="parameter-option" value="nitrogen">
+				<div class="check"></div>
+				<span class="form-text">Nitrogen</span>
+			</label>
+			<br>
+			<label class="form-component disabled" for="phosphorus-option">
+				<input type="checkbox" id="phosphorus-option" name="parameter-option" value="phosphorus">
+				<div class="check"></div>
+				<span class="form-text">Phosphorus</span>
+			</label>
+			<br>
+			<label class="form-component" for="sediment-option">
+				<input type="checkbox" id="sediment-option" name="parameter-option" value="sediment">
+				<div class="check"></div>
+				<span class="form-text">Sediment</span>
+			</label>
+		</div>
+		
 		<div class="cda-sediment-options-wrapper">
+			<h5>Select Sediment Options:</h5>
 			<label class="form-component" for="manage-option">
 				<input checked type="radio" id="manage-option" name="cda-sedimentOptions" value="cda-manageOption">
 				<div class="check"></div>
