--- a/html/content.html
+++ b/html/content.html
@@ -26,42 +26,48 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		</label>
 	</section>
 
-	<section>
-		
-		<div class="cda-areaScenario-options-wrapper">
-			<h4>Choose scale:</h4>
-			<label class="form-component" for="resource-option">
-				<input checked type="radio" id="resource-option" name="cda-areaOption" value="cda-resourceUnit">
-				<div class="check"></div>
-				<span class="form-text">Resource Units</span>
-			</label>
-			<br>
-			<label class="form-component" for="huc-option">
-				<input type="radio" id="huc-option" name="cda-areaOption" value="cda-huc12">
-				<div class="check"></div>
-				<span class="form-text">HUC 12</span>
-			</label>
-			<br>
-			<label class="form-component" for="catchments-option">
-				<input type="radio" id="catchments-option" name="cda-areaOption" value="cda-catchments">
-				<div class="check"></div>
-				<span class="form-text">Catchments</span>
-			</label>
+	<section class="cda-areaScenario-section-wrapper">
+		<div>
+			<div class="cda-areaScenario-options-wrapper">
+				<h4>Choose scale:</h4>
+				<label class="form-component" for="resource-option">
+					<input checked type="radio" id="resource-option" name="cda-areaOption" value="cda-resourceUnit">
+					<div class="check"></div>
+					<span class="form-text">Resource Units</span>
+				</label>
+				<br>
+				<label class="form-component" for="huc-option">
+					<input type="radio" id="huc-option" name="cda-areaOption" value="cda-huc12">
+					<div class="check"></div>
+					<span class="form-text">HUC 12</span>
+				</label>
+				<br>
+				<label class="form-component" for="catchments-option">
+					<input type="radio" id="catchments-option" name="cda-areaOption" value="cda-catchments">
+					<div class="check"></div>
+					<span class="form-text">Catchments</span>
+				</label>
+			</div>
+			
+			<div class="cda-localProject-options-wrapper">
+				<h4>Choose Delivery:</h4>
+				<label class="form-component" for="field-option">
+					<input checked type="radio" id="field-option" name="cda-localOption" value="cda-fieldOption">
+					<div class="check"></div>
+					<span class="form-text">Edge of Field</span>
+				</label>
+				<br>
+				<label class="form-component" for="stream-option">
+					<input type="radio" id="stream-option" name="cda-localOption" value="cda-streamOption">
+					<div class="check"></div>
+					<span class="form-text">Delivered to Stream</span>
+				</label>
+			</div>
 		</div>
+		
 
-		<div class="cda-localProject-options-wrapper">
-			<h4>Choose Delivery:</h4>
-			<label class="form-component" for="field-option">
-				<input checked type="radio" id="field-option" name="cda-localOption" value="cda-fieldOption">
-				<div class="check"></div>
-				<span class="form-text">Edge of Field</span>
-			</label>
-			<br>
-			<label class="form-component" for="stream-option">
-				<input type="radio" id="stream-option" name="cda-localOption" value="cda-streamOption">
-				<div class="check"></div>
-				<span class="form-text">Delivered to Stream</span>
-			</label>
+		<div class="cda-selected-areas-wrapper">
+			<h5>Click on map to select area(s)</h5>
 		</div>
 	</section>
 
