start testing report logic/math

--- a/html/content.html
+++ b/html/content.html
@@ -66,7 +66,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		</div>
 		
 
-		<div class="cda-selected-areas-wrapper">
+		<!-- <div class="cda-selected-areas-wrapper">
 			<h5>Click on map to select area(s)</h5>
 			<div class="cda-selected-areas">
 				<div style="display: none;" class="cda-selected">Id:<div class="cda-selected-close">
@@ -74,7 +74,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</section>
 
 	<section>
@@ -130,7 +130,23 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		</label>
 	</section>
 	
-	<section>
+	<div class="cda-selected-areas-wrapper">
+		<h5>Click on map to select area(s)</h5>
+		<div class="cda-selected-areas">
+			<div style="display: none;" class="cda-selected">Id:<div class="cda-selected-close">
+					<div>&#10005;</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<!-- <div class="cda-select-bmp-wrapper">
+		<button class="button button-primary">Select Best Management Practice</button>
+	</div> -->
+
+	
+	<section class="cda-build-report-section-wrapper">
 		<div class="cda-build-report-wrapper">
 			<button class="button button-primary">Create Report</button>
 		</div>
@@ -145,6 +161,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		<button class="button button-primary cda-back-to-controls">Back to controls</button>
 		<button class="button button-primary">Print Report</button>
 	</div>
+	<h1 class="cda-building-report-text">Building report.....</h1>
 	
 </div>
 
