updates area selecetd counter and fixed bug: removing items from the selecetd areas array

--- a/html/content.html
+++ b/html/content.html
@@ -66,15 +66,16 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		</div>
 		
 
-		<!-- <div class="cda-selected-areas-wrapper">
+		<div class="cda-selected-areas-wrapper">
 			<h5>Click on map to select area(s)</h5>
+			<div class="cda-number-selected-area"><span>0</span> of 5 Areas Selected</div>
 			<div class="cda-selected-areas">
 				<div style="display: none;" class="cda-selected">Id:<div class="cda-selected-close">
 						<div>&#10005;</div>
 					</div>
 				</div>
 			</div>
-		</div> -->
+		</div>
 	</section>
 
 	<section>
@@ -130,7 +131,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		</label>
 	</section>
 	
-	<div class="cda-selected-areas-wrapper">
+	<!-- <div class="cda-selected-areas-wrapper">
 		<h5>Click on map to select area(s)</h5>
 		<div class="cda-selected-areas">
 			<div style="display: none;" class="cda-selected">Id:<div class="cda-selected-close">
@@ -138,7 +139,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
 	<!-- <div class="cda-select-bmp-wrapper">
