start major update of GUI and UX

--- a/html/content.html
+++ b/html/content.html
@@ -131,27 +131,19 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		</label>
 	</section>
 	
-	<!-- <div class="cda-selected-areas-wrapper">
-		<h5>Click on map to select area(s)</h5>
-		<div class="cda-selected-areas">
-			<div style="display: none;" class="cda-selected">Id:<div class="cda-selected-close">
-					<div>&#10005;</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
 
 
-	<!-- <div class="cda-select-bmp-wrapper">
+
+	<section class="cda-select-bmp-wrapper">
 		<button class="button button-primary">Select Best Management Practice</button>
-	</div> -->
+	</section>
 
 	
-	<section class="cda-build-report-section-wrapper">
-		<div class="cda-build-report-wrapper">
+	<!-- <section class="cda-build-report-section-wrapper"> -->
+		<!-- <div class="cda-build-report-wrapper">
 			<button class="button button-primary">Create Report</button>
 		</div>
-	</section>
+	</section> -->
 </div>
 
 
