--- a/html/content.html
+++ b/html/content.html
@@ -10,13 +10,14 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 	<div class="cda-main-data-selection-wrapper">
 		<section class="cda-intro-text-wrapper">
 			<div class="blueFont" id="test">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+				dolore
 				magna
 				aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat.
 			</div>
 		</section>
-		
+
 		<section class="cda-assessmentDD-wrapper">
 			<h4>Select an assessment type:</h4>
 			<label class="form-component" for="area-option">
@@ -31,7 +32,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 				<span class="form-text">Local Project</span>
 			</label>
 		</section>
-		
+
 		<section class="cda-areaScenario-section-wrapper">
 			<div>
 				<div class="cda-areaScenario-options-wrapper">
@@ -54,11 +55,12 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 						<span class="form-text">Catchments</span>
 					</label>
 				</div>
-		
+
 				<div class="cda-localProject-options-wrapper">
 					<h4>Choose Delivery:</h4>
 					<label class="form-component" for="edge-field-option">
-						<input checked type="radio" id="edge-field-option" name="cda-localOption" value="cda-fieldOption">
+						<input checked type="radio" id="edge-field-option" name="cda-localOption"
+							value="cda-fieldOption">
 						<div class="check"></div>
 						<span class="form-text">Edge of Field</span>
 					</label>
@@ -70,8 +72,8 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 					</label>
 				</div>
 			</div>
-		
-		
+
+
 			<div class="cda-selected-areas-wrapper">
 				<h5>Click on map to select area(s)</h5>
 				<div class="cda-number-selected-area"><span>0</span> of 5 Areas Selected</div>
@@ -83,7 +85,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 				</div>
 			</div>
 		</section>
-		
+
 		<section>
 			<h4>Parameters to simulate:</h4>
 			<div class="cda-parameter-option-wrapper">
@@ -105,23 +107,25 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 					<span class="form-text">Sediment</span>
 				</label>
 			</div>
-		
+
 			<div class="cda-sediment-options-wrapper">
 				<h5>Select Sediment Options:</h5>
 				<label class="form-component" for="management-option">
-					<input checked type="radio" id="management-option" name="cda-sedimentOptions" value="cda-manageOption">
+					<input checked type="radio" id="management-option" name="cda-sedimentOptions"
+						value="cda-manageOption">
 					<div class="check"></div>
 					<span class="form-text">Management Factors</span>
 				</label>
 				<br>
 				<label class="form-component" for="efficiencies-option">
-					<input type="radio" id="efficiencies-option" name="cda-sedimentOptions" value="cda-efficienciesOption">
+					<input type="radio" id="efficiencies-option" name="cda-sedimentOptions"
+						value="cda-efficienciesOption">
 					<div class="check"></div>
 					<span class="form-text">Efficiencies</span>
 				</label>
 			</div>
 		</section>
-		
+
 		<section class="cda-comparison-options-wrapper">
 			<h4>Comparison type:</h4>
 			<label class="form-component" for="baseline-option">
@@ -136,7 +140,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 				<span class="form-text">To Alternate Scenario</span>
 			</label>
 		</section>
-		
+
 		<section class="cda-select-bmp-wrapper">
 			<button class="button button-primary">Select Best Management Practices</button>
 		</section>
@@ -144,19 +148,20 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 
 	<div class="cda-bmp-section-wrapper">
 		<div class="cda-bmp-selection-wrapper">
-			
+
 			<div class="cda-building-bmp-text" style="display: flex; align-items: center;">
 				<h2>Retreiving Data..... </h2>
-				<img style="margin-left: 10px;" class="cda-green-spinner" src="plugins/conservation-delivery-application/images/green_loading.gif" alt="">
+				<img style="margin-left: 10px;" class="cda-green-spinner"
+					src="plugins/conservation-delivery-application/images/green_loading.gif" alt="">
 			</div>
-			
+
 			<div class="cda-bmp-gui-wrapper">
 				<div class="cda-bmp-header">
 					<button class="button button-primary">Back to Initial Selections</button>
 				</div>
 				<h3 class="blueText">Select BMP's for each selected area below.</h3>
 				<div class="cda-bmp-selection-item-wrapper">
-				
+
 				</div>
 			</div>
 		</div>
@@ -176,8 +181,5 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		<button class="button button-primary">Print Report</button>
 	</div>
 	<h1 class="cda-building-report-text">Building report.....</h1>
-	
+
 </div>
-
-
-
