--- a/html/content.html
+++ b/html/content.html
@@ -159,7 +159,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 				<div class="cda-bmp-header">
 					<button class="button button-primary">Back to Initial Selections</button>
 				</div>
-				<h3 class="blueText">Select BMP's for each selected area below.</h3>
+				<h3 class="blueText">Select BMP's for each selected field below.</h3>
 				<div class="cda-bmp-selection-item-wrapper">
 
 				</div>
