--- a/html/content.html
+++ b/html/content.html
@@ -3,183 +3,6 @@ Dijit ContentPane to hold all the elements. The ContentPane is assigned a dynami
 takes the ContentPane id and prepends it to every element with a declared id in this HTML before the elements are created.
 The unique ContentPane id makes all the element ids unique and prevents duplicate id errors across other apps.-->
 
-<div class="cda-sidebar-wrapper">
-
-
-
-	<div class="cda-main-data-selection-wrapper">
-		<section class="cda-intro-text-wrapper">
-			<div class="blueFont" id="test">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-				dolore
-				magna
-				aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat.
-			</div>
-		</section>
-
-		<section class="cda-assessmentDD-wrapper">
-			<h4>Select an assessment type:</h4>
-			<label class="form-component" for="area-option">
-				<input checked type="radio" id="area-option" name="cda-firstOption" value="cda-areaScenario">
-				<div class="check"></div>
-				<span class="form-text">Area Scenario</span>
-			</label>
-			<br>
-			<label class="form-component" for="local-option">
-				<input type="radio" id="local-option" name="cda-firstOption" value="cda-localProject">
-				<div class="check"></div>
-				<span class="form-text">Local Project</span>
-			</label>
-		</section>
-
-		<section class="cda-areaScenario-section-wrapper">
-			<div>
-				<div class="cda-areaScenario-options-wrapper">
-					<h4>Choose scale:</h4>
-					<label class="form-component" for="resource-option">
-						<input checked type="radio" id="resource-option" name="cda-areaOption" value="cda-resourceUnit">
-						<div class="check"></div>
-						<span class="form-text">Resource Units</span>
-					</label>
-					<br>
-					<label class="form-component" for="huc-option">
-						<input type="radio" id="huc-option" name="cda-areaOption" value="cda-huc12">
-						<div class="check"></div>
-						<span class="form-text">HUC 12</span>
-					</label>
-					<br>
-					<label class="form-component" for="catchment-option">
-						<input type="radio" id="catchment-option" name="cda-areaOption" value="cda-catchment">
-						<div class="check"></div>
-						<span class="form-text">Catchments</span>
-					</label>
-				</div>
-
-				<div class="cda-localProject-options-wrapper">
-					<h4>Choose Delivery:</h4>
-					<label class="form-component" for="edge-field-option">
-						<input checked type="radio" id="edge-field-option" name="cda-localOption"
-							value="cda-fieldOption">
-						<div class="check"></div>
-						<span class="form-text">Edge of Field</span>
-					</label>
-					<br>
-					<label class="form-component" for="stream-option">
-						<input type="radio" id="stream-option" name="cda-localOption" value="cda-streamOption">
-						<div class="check"></div>
-						<span class="form-text">Delivered to Stream</span>
-					</label>
-				</div>
-			</div>
-
-
-			<div class="cda-selected-areas-wrapper">
-				<h5>Click on map to select area(s)</h5>
-				<div class="cda-number-selected-area"><span>0</span> of 5 Areas Selected</div>
-				<div class="cda-selected-areas">
-					<!-- <div style="display: none;" class="cda-selected">Id:<div class="cda-selected-close">
-							<div>&#10005;</div>
-						</div>
-					</div> -->
-				</div>
-			</div>
-		</section>
-
-		<section>
-			<h4>Parameters to simulate:</h4>
-			<div class="cda-parameter-option-wrapper">
-				<label class="form-component" for="nitrogen-option">
-					<input checked type="checkbox" id="nitrogen-option" name="parameter-option" value="nitrogen">
-					<div class="check"></div>
-					<span class="form-text">Nitrogen</span>
-				</label>
-				<br>
-				<label class="form-component disabled" for="phosphorus-option">
-					<input type="checkbox" id="phosphorus-option" name="parameter-option" value="phosphorus">
-					<div class="check"></div>
-					<span class="form-text">Phosphorus</span>
-				</label>
-				<br>
-				<label class="form-component" for="sediment-option">
-					<input type="checkbox" id="sediment-option" name="parameter-option" value="sediment">
-					<div class="check"></div>
-					<span class="form-text">Sediment</span>
-				</label>
-			</div>
-
-			<div class="cda-sediment-options-wrapper">
-				<h5>Select Sediment Options:</h5>
-				<label class="form-component" for="management-option">
-					<input checked type="radio" id="management-option" name="cda-sedimentOptions"
-						value="cda-manageOption">
-					<div class="check"></div>
-					<span class="form-text">Management Factors</span>
-				</label>
-				<br>
-				<label class="form-component" for="efficiencies-option">
-					<input type="radio" id="efficiencies-option" name="cda-sedimentOptions"
-						value="cda-efficienciesOption">
-					<div class="check"></div>
-					<span class="form-text">Efficiencies</span>
-				</label>
-			</div>
-		</section>
-
-		<section class="cda-comparison-options-wrapper">
-			<h4>Comparison type:</h4>
-			<label class="form-component" for="baseline-option">
-				<input checked="true" type="radio" id="baseline-option" name="cda-compare-option">
-				<div class="check"></div>
-				<span class="form-text">To Baseline</span>
-			</label>
-			<br>
-			<label class="form-component" for="alternate-option">
-				<input type="radio" id="alternate-option" name="cda-compare-option">
-				<div class="check"></div>
-				<span class="form-text">To Alternate Scenario</span>
-			</label>
-		</section>
-
-		<section class="cda-select-bmp-wrapper">
-			<button class="button button-primary">Select Best Management Practices</button>
-		</section>
-	</div>
-
-	<div class="cda-bmp-section-wrapper">
-		<div class="cda-bmp-selection-wrapper">
-
-			<div class="cda-building-bmp-text" style="display: flex; align-items: center;">
-				<h2>Retreiving Data..... </h2>
-				<img style="margin-left: 10px;" class="cda-green-spinner"
-					src="plugins/conservation-delivery-application/images/green_loading.gif" alt="">
-			</div>
-
-			<div class="cda-bmp-gui-wrapper">
-				<div class="cda-bmp-header">
-					<button class="button button-primary">Back to Initial Selections</button>
-				</div>
-				<h3 class="blueText">Select BMP's for each selected field below.</h3>
-				<div class="cda-bmp-selection-item-wrapper">
-
-				</div>
-			</div>
-		</div>
-
-		<!-- <section class="cda-build-report-section-wrapper">
-			<div class="cda-build-report-wrapper">
-				<button class="button button-primary">Create Report</button>
-			</div>
-		</section> -->
-	</div>
-</div>
-
-<!-- report wrapper -->
-<div class="cda-report-wrapper">
-	<div class="cda-report-header">
-		<button class="button button-primary cda-back-to-controls">Back to controls</button>
-		<button class="button button-primary">Print Report</button>
-	</div>
-	<h1 class="cda-building-report-text">Building report.....</h1>
+<div id="app" class="cda-sidebar-wrapper">
 
 </div>
