--- a/html/content.html
+++ b/html/content.html
@@ -4,5 +4,5 @@ takes the ContentPane id and prepends it to every element with a declared id in 
 The unique ContentPane id makes all the element ids unique and prevents duplicate id errors across other apps.-->
 
 <div id="app" class="cda-sidebar-wrapper">
-
+    <h1>hello world</h1>
 </div>
