--- a/html/content.html
+++ b/html/content.html
@@ -8,4 +8,10 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 	<div class="cda-into-text">Introduction text Introduction textIntroduction textIntroduction textIntroduction
 		textIntroduction
 		textIntroduction textIntroduction textIntroduction text</div>
+	<div class="cda-render-list">
+
+	</div>
+	<button class="cda-remove-one">Click me</button>
+	<div id="fields-selected-wrapper" class="cda-fields-selected-wrapper"></div>
+
 </div>
