--- a/html/content.html
+++ b/html/content.html
@@ -5,13 +5,22 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 
 
 <div class="cda-sidebar-wrapper">
-	<div class="cda-into-text">Introduction text Introduction textIntroduction textIntroduction textIntroduction
+	<div class="cda-intro-text">Introduction text Introduction textIntroduction textIntroduction textIntroduction
 		textIntroduction
 		textIntroduction textIntroduction textIntroduction text</div>
-	<div class="cda-render-list">
+	<!-- assesment radio buttons -->
+	<h4>Select an assessment type:</h4>
+	<div id="cda-assesment-radio-btns" class="cda-assesment-radio-btns"></div>
+
+
+	<h4>Choose scale:</h4>
+	<div class="cda-areaScenario-options-wrapper"></div>
+
+
+	<!-- <div class="cda-render-list">
 
 	</div>
 	<button class="cda-remove-one">Click me</button>
-	<div id="fields-selected-wrapper" class="cda-fields-selected-wrapper"></div>
+	<div id="fields-selected-wrapper" class="cda-fields-selected-wrapper"></div> -->
 
 </div>
