working on the UI

--- a/html/content.html
+++ b/html/content.html
@@ -9,12 +9,32 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		textIntroduction
 		textIntroduction textIntroduction textIntroduction text</div>
 	<!-- assesment radio buttons -->
-	<h4>Select an assessment type:</h4>
-	<div id="cda-assesment-radio-btns" class="cda-assesment-radio-btns"></div>
+	<div class="cda-assesment-wrapper">
+		<h4>Select an assessment type:</h4>
+		<div id="assesment-radio-btns" class="cda-assesment-radio-btns"></div>
+	</div>
+	<!-- area scenario radio buttons -->
+	<div class="cda-areaScenario-wrapper">
+		<h4>Choose scale:</h4>
+		<div id="areaScenario-radio-btns" class="cda-areaScenario-radio-btns"></div>
+	</div>
+	<!-- delivery radio buttons -->
+	<div class="cda-delivery-wrapper">
+		<h4>Choose Delivery:</h4>
+		<div id="delivery-radio-btns" class="cda-delivery-radio-btns"></div>
+	</div>
 
+	<!-- parameters to simulate checkboxes -->
+	<div class="cda-parameters-wrapper">
+		<h4>Parameters to simulate:</h4>
+		<div id="parameters-checkbox" class="cda-parameters-checkbox"></div>
+	</div>
+	<!-- sediment options radio button -->
+	<div class="cda-sediment-option-wrapper">
+		<h5>Select sediment options</h5>
+		<div class="cda-sediment-options-radio-btns"></div>
+	</div>
 
-	<h4>Choose scale:</h4>
-	<div class="cda-areaScenario-options-wrapper"></div>
 
 
 	<!-- <div class="cda-render-list">
