more UI updates

--- a/html/content.html
+++ b/html/content.html
@@ -8,6 +8,12 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 	<div class="cda-intro-text">Introduction text Introduction textIntroduction textIntroduction textIntroduction
 		textIntroduction
 		textIntroduction textIntroduction textIntroduction text</div>
+
+	<!-- selected areas component on main page -->
+	<div class="cda-selected-area-wrapper">
+		<h4>Selected areas</h4>
+		<div>content goes here</div>
+	</div>
 	<!-- assesment radio buttons -->
 	<div class="cda-assesment-wrapper">
 		<h4>Select an assessment type:</h4>
@@ -35,6 +41,16 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		<div class="cda-sediment-options-radio-btns"></div>
 	</div>
 
+	<!-- comparison type radio buttons -->
+	<div class="cda-comparison-type-wrapper">
+		<h4>Comparison type:</h4>
+		<div class="cda-comparison-type-radio-btns"></div>
+	</div>
+
+	<!-- Select BMP Button wrapper -->
+	<div class="cda-bmp-select-button-wrapper">
+		<button class="button button-primary">Select Best Management Practices</button>
+	</div>
 
 
 	<!-- <div class="cda-render-list">
