--- a/html/content.html
+++ b/html/content.html
@@ -12,7 +12,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 	<!-- selected areas component on main page -->
 	<div class="cda-selected-area-wrapper">
 		<h4>Selected areas</h4>
-		<div>content goes here</div>
+		<div class="cda-selected-areas"></div>
 	</div>
 	<!-- assesment radio buttons -->
 	<div class="cda-assesment-wrapper">
