building out further UI function

--- a/html/content.html
+++ b/html/content.html
@@ -53,6 +53,12 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 	</div>
 
 
+	<!-- BMP Selection wrapper -->
+	<div class="cda-bmp-select-wrapper">
+		<button class="cda-back-to-main-button button button-primary">Back to main</button>
+	</div>
+
+
 	<!-- <div class="cda-render-list">
 
 	</div>
